--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -18,7 +18,7 @@
         {% endwith %}
 
         <form method="POST">
-            <input type="hidden" name="token" value="{{ token }}" />
+            <!-- Token no longer needed in form for OTP flow, but keeping it harmless if present -->
             <div class="form-group">
                 <label for="password">New Password</label>
                 <input type="password" id="password" name="password" required>
