--- a/templates/venue_booking.html
+++ b/templates/venue_booking.html
@@ -133,11 +133,11 @@
         transition: all 0.3s ease;
     }
     .tab:hover {
-        color: #30d9a8;
+        color: #8b9d83;
     }
     .tab.active {
-        color: #30d9a8;
-        border-bottom-color: #30d9a8;
+        color: #8b9d83;
+        border-bottom-color: #8b9d83;
     }
     .tab-content {
         display: none;
